<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical"></LinearLayout>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:ems="10"
        android:hint="@string/descripcci_n"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText9"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="date" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bot"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText12"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:ems="10"
            android:hint="@string/coste"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:onClick="cancelar"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:onClick="regitrarTarea"
            android:text="@string/registrar" />
    </LinearLayout>

</LinearLayout>