<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main5Activity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:orientation="vertical">

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:onClick="nuevaTarea"
        android:text="@string/aniadirTarea" />

    <LinearLayout
        android:id="@+id/mid"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:onClick="verTareas"
        android:text="@string/verTarea" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cerrarSesion"
        android:text="@string/cerrarSesion" />
</LinearLayout>